ncp-features-example/template/nginx-web-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-${FEATURE_NAME}
  namespace: ncp-feature
  labels:
    feature: ${FEATURE_NAME} 
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: ${FEATURE_NAME}       
  template:
    metadata:
      labels:
        feature: ${FEATURE_NAME} 
    spec:
      containers:
      - name: nginx-${FEATURE_NAME} 
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
        - mountPath: /etc/nginx/ssl
          name: nginx-ssl
      volumes:
      - name: nginx
        configMap:
          name: nginx
      - name: nginx-ssl
        secret:
          secretName: nginx-ssl
